--- a/package.json
+++ b/package.json
@@ -24,59 +24,59 @@
   "homepage": "https://github.com/arg20/koa-api-seed#readme",
   "dependencies": {
     "base64-url": "^1.3.3",
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.5.0",
     "decorator-toggles": "0.0.6",
-    "dotenv": "^2.0.0",
-    "jsonwebtoken": "^7.1.9",
-    "koa": "^2.0.0",
+    "dotenv": "^4.0.0",
+    "jsonwebtoken": "^7.3.0",
+    "koa": "^2.2.0",
     "koa-body": "2",
-    "koa-jwt": "^2.1.0",
-    "koa-passport": "3.0.0-rc.2",
+    "koa-jwt": "^3.0.1",
+    "koa-passport": "3.0.0",
     "koa-router": "^7.0.1",
-    "le_node": "^1.6.9",
-    "lodash": "^4.17.2",
-    "moment": "^2.17.0",
-    "mongodb": "^2.2.11",
-    "mongoose": "^4.7.0",
+    "le_node": "^1.7.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.2",
     "mongoose-timestamp": "^0.6.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
-    "reflect-metadata": "^0.1.8",
-    "request-promise": "^4.1.1",
-    "sendgrid": "^4.7.1",
-    "winston": "^2.3.0"
+    "reflect-metadata": "^0.1.10",
+    "request-promise": "^4.2.0",
+    "sendgrid": "^4.8.4",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.0.36",
-    "@types/chai": "^3.4.34",
-    "@types/del": "^2.2.31",
-    "@types/gulp": "^3.8.32",
-    "@types/gulp-mocha": "^0.0.29",
-    "@types/gulp-nodemon": "^0.0.29",
-    "@types/gulp-replace": "^0.0.29",
-    "@types/koa": "^2.0.34",
-    "@types/koa-passport": "^2.0.2",
-    "@types/koa-router": "^7.0.21",
-    "@types/lodash": "^4.14.40",
-    "@types/mongoose": "^4.6.1",
-    "@types/passport": "^0.2.34",
-    "@types/passport-facebook": "^1.0.29",
+    "@types/bluebird": "^3.5.2",
+    "@types/chai": "^3.4.35",
+    "@types/del": "^2.2.32",
+    "@types/gulp": "^4.0.2",
+    "@types/gulp-mocha": "^0.0.30",
+    "@types/gulp-nodemon": "^0.0.30",
+    "@types/gulp-replace": "^0.0.30",
+    "@types/koa": "^2.0.39",
+    "@types/koa-passport": "^2.0.4",
+    "@types/koa-router": "^7.0.22",
+    "@types/lodash": "^4.14.58",
+    "@types/mongoose": "latest",
+    "@types/passport": "^0.3.3",
+    "@types/passport-facebook": "^2.1.3",
     "@types/passport-local": "^1.0.29",
     "@types/randomstring": "^1.1.5",
-    "@types/request-promise": "^4.1.33",
-    "@types/winston": "0.0.32",
+    "@types/request-promise": "latest",
+    "@types/winston": "2.3.0",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^3.0.1",
+    "gulp-mocha": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-replace": "^0.5.4",
-    "gulp-typescript": "^3.1.3",
-    "gulpclass": "^0.1.1",
+    "gulp-typescript": "^3.1.6",
+    "gulpclass": "^0.1.2",
     "mocha": "^3.2.0",
-    "typescript": "^2.0.10",
-    "yargs": "^6.4.0"
+    "typescript": "^2.2.2",
+    "yargs": "^7.0.2"
   }
 }
