--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
     "koa-body": "2",
+    "koa-compress": "^2.0.0",
     "koa-jwt": "^3.0.1",
     "koa-passport": "3.0.0",
     "koa-router": "^7.0.1",
