--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "homepage": "https://github.com/arg20/koa-api-seed#readme",
   "dependencies": {
+    "aws-sdk": "^2.45.0",
     "base64-url": "^1.3.3",
     "bluebird": "^3.5.0",
     "decorator-toggles": "0.0.6",
@@ -35,9 +36,12 @@
     "koa-jwt": "^3.0.1",
     "koa-passport": "3.0.0",
     "koa-router": "^7.0.1",
+    "koa-send": "^4.0.0",
     "koa-socket": "^4.4.0",
     "le_node": "^1.7.0",
     "lodash": "^4.17.4",
+    "mime-types": "^2.1.15",
+    "mmmagic": "^0.4.5",
     "moment": "^2.18.1",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
