--- a/package.json
+++ b/package.json
@@ -82,9 +82,12 @@
     "gulp-mocha": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-replace": "^0.5.4",
+    "gulp-tslint": "^8.0.0",
     "gulp-typescript": "^3.1.6",
     "gulpclass": "^0.1.2",
     "mocha": "^3.2.0",
+    "tslint": "^5.1.0",
+    "tslint-eslint-rules": "^4.0.0",
     "typescript": "^2.2.2",
     "yargs": "^7.0.2"
   }
