--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.10",
+    "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "sendgrid": "^4.8.4",
     "socket.io-client": "^1.7.3",
