--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
   "license": "ISC",
   "homepage": "https://github.com/arg20/koa-api-seed#readme",
   "dependencies": {
-    "aws-sdk": "^2.45.0",
+    "aws-sdk": "^2.66.0",
     "base64-url": "^1.3.3",
     "bluebird": "^3.5.0",
     "decorator-toggles": "0.0.6",
     "dotenv": "^4.0.0",
-    "jsonwebtoken": "^7.3.0",
+    "jsonwebtoken": "^7.4.1",
     "koa": "^2.2.0",
-    "koa-body": "2",
+    "koa-body": "^2.1.0",
     "koa-compose": "^4.0.0",
     "koa-compress": "^2.0.0",
-    "koa-jwt": "^3.0.1",
+    "koa-jwt": "^3.2.2",
     "koa-passport": "3.0.0",
-    "koa-router": "^7.0.1",
-    "koa-send": "^4.0.0",
+    "koa-router": "^7.2.0",
+    "koa-send": "^4.1.0",
     "koa-socket": "^4.4.0",
     "le_node": "^1.7.0",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.15",
     "mmmagic": "^0.4.5",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.25",
-    "mongoose": "^4.9.2",
+    "mongodb": "^2.2.28",
+    "mongoose": "^4.10.5",
     "mongoose-timestamp": "^0.6.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -52,44 +52,44 @@
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.10",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0",
-    "sendgrid": "^4.8.4",
-    "socket.io-client": "^1.7.3",
-    "socket.io-redis": "^4.0.0",
+    "request-promise": "^4.2.1",
+    "sendgrid": "^5.1.1",
+    "socket.io-client": "^2.0.2",
+    "socket.io-redis": "^5.1.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.2",
-    "@types/chai": "^3.4.35",
+    "@types/bluebird": "^3.5.5",
+    "@types/chai": "^4.0.0",
     "@types/del": "^2.2.32",
-    "@types/gulp": "^4.0.2",
+    "@types/gulp": "^4.0.4",
     "@types/gulp-mocha": "^0.0.30",
     "@types/gulp-nodemon": "^0.0.30",
     "@types/gulp-replace": "^0.0.30",
     "@types/koa": "^2.0.39",
     "@types/koa-passport": "^2.0.4",
     "@types/koa-router": "^7.0.22",
-    "@types/lodash": "^4.14.58",
+    "@types/lodash": "^4.14.65",
     "@types/mongoose": "latest",
     "@types/passport": "^0.3.3",
-    "@types/passport-facebook": "^2.1.3",
-    "@types/passport-local": "^1.0.29",
+    "@types/passport-facebook": "^2.1.4",
+    "@types/passport-local": "^1.0.30",
     "@types/randomstring": "^1.1.5",
     "@types/request-promise": "latest",
-    "@types/winston": "2.3.0",
-    "chai": "^3.5.0",
+    "@types/winston": "2.3.3",
+    "chai": "^4.0.2",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^4.1.0",
+    "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-replace": "^0.5.4",
-    "gulp-tslint": "^8.0.0",
-    "gulp-typescript": "^3.1.6",
+    "gulp-tslint": "^8.1.1",
+    "gulp-typescript": "^3.1.7",
     "gulpclass": "^0.1.2",
-    "mocha": "^3.2.0",
-    "tslint": "^5.1.0",
-    "tslint-eslint-rules": "^4.0.0",
-    "typescript": "^2.2.2",
-    "yargs": "^7.0.2"
+    "mocha": "^3.4.2",
+    "tslint": "^5.4.3",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.3.4",
+    "yargs": "^8.0.1"
   }
 }
