--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "koa-router": "^7.2.1",
     "koa-send": "^4.1.1",
     "koa-socket": "^4.4.0",
+    "koa-views": "^6.1.3",
     "le_node": "^1.7.1",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.17",
